--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+
     compile 'org.parceler:parceler-api:1.1.6'
     apt 'org.parceler:parceler:1.1.6'
 }
