--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
 
     testCompile 'junit:junit:4.12'
+    testCompile "org.robolectric:robolectric:3.2.2"
+    testCompile "org.mockito:mockito-core:2.6.9"
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
