--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,19 +29,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
 
-    testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:robolectric:3.2.2"
-    testCompile "org.mockito:mockito-core:2.6.9"
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-    compile 'org.parceler:parceler-api:1.1.6'
-    apt 'org.parceler:parceler:1.1.6'
+    compile 'com.google.firebase:firebase-crash:10.0.1'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.robolectric:robolectric:3.2.2'
+    testCompile 'org.mockito:mockito-core:2.6.9'
 }
 
+apply plugin: 'com.google.gms.google-services'
