--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,16 +30,20 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    //Android support
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
 
+    //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
+    //Firebase
     compile 'com.google.firebase:firebase-crash:10.0.1'
 
+    //Testing
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.2.2'
     testCompile 'org.mockito:mockito-core:2.6.9'
