--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Views.Activities.FavoritesActivity">
+        <activity
+            android:name=".Views.Activities.FavoritesActivity"
+            android:parentActivityName=".Views.Activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+            //This will be used by the go back button in the app bar
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Views.Activities.MainActivity"/>
         </activity>
     </application>
 
