--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.pedrojtmartins.racingcalendar">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.Manifest.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +12,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
@@ -24,7 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".views.activities.FavoritesActivity"
             android:parentActivityName=".views.activities.MainActivity"
@@ -34,9 +34,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.activities.MainActivity" />
         </activity>
-
         <activity android:name=".views.activities.SettingsActivity" />
 
+
+        <!--Notifications-->
+        <receiver
+            android:name=".alarms.RCAlarmBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service android:name=".notifications.RCNotificationService" />
     </application>
 
 </manifest>
