--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.Manifest.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -50,6 +50,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.activities.MainActivity" />
         </activity>
+        <activity
+            android:name=".views.activities.AboutActivity"
+            android:parentActivityName=".views.activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.activities.MainActivity" />
+        </activity>
+
 
         <!-- NotificationsActivity -->
         <receiver
@@ -59,16 +68,15 @@
 
         <service android:name=".notifications.RCNotificationService" />
 
-        <!--This needs to happen to reset the alarms. When -->
-        <!--the device is turned off all alarms are removed-->
+        <!-- This needs to happen to reset the alarms. When -->
+        <!-- the device is turned off all alarms are removed -->
         <receiver android:name=".alarms.RCAlarmResetBroadcastReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
-        <service android:name=".alarms.RCAlarmResetService"/>
-
+        <service android:name=".alarms.RCAlarmResetService" />
     </application>
 
 </manifest>
