--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.pedrojtmartins.racingcalendar"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 25
         versionCode 5
         versionName "1.03"
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'com.android.support:customtabs:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
