--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,11 @@
         </activity>
         <activity
             android:name=".views.activities.ResultsActivity"
-            android:theme="@style/AppTheme.NoActionBar">>
+            android:parentActivityName=".views.activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.activities.MainActivity"/>
         </activity>
 
         <!-- Notifications receiver and service -->
