Fix WEC results

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,16 @@ android {
         }
     }
 
+    productFlavors {
+        regular {
+            resValue "string", "app_name", "Racing Calendar"
+        }
+        pro {
+            applicationIdSuffix ".pro"
+            resValue "string", "app_name", "Racing Calendar Pro"
+        }
+    }
+
     dataBinding {
         enabled = true
     }
