--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
     compileSdkVersion 26
@@ -64,7 +65,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    compile 'com.google.firebase:firebase-core:11.2.2'
     compile 'com.google.firebase:firebase-crash:11.2.2'
+    compile 'com.google.firebase:firebase-perf:11.2.2'
     compile 'com.google.firebase:firebase-ads:11.2.2'
     compile 'com.google.firebase:firebase-messaging:11.2.2'
 
