--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
@@ -10,12 +9,18 @@ buildscript {
         classpath 'com.google.firebase:firebase-plugins:1.1.1'
     }
 }
-
 allprojects {
     repositories {
         jcenter()
         maven { url "https://maven.google.com" }
     }
+}
+
+ext {
+    supportVersion = "26.0.2"
+    constraintLayoutVersion = "1.0.2"
+    firebaseVersion = "11.4.0"
+    gsonVersion = "2.3.0"
 }
 
 task clean(type: Delete) {
