--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,20 +78,20 @@
 
         <!-- Notifications receiver and service -->
         <!-- Updated for api 26 -->
-        <receiver android:name=".alarms.RCAlarmBroadcastReceiver2"/>
-        <service android:name=".notifications.RCNotificationService2"/>
+        <receiver android:name=".alarms.RCAlarmBroadcastReceiver"/>
+        <service android:name=".notifications.RCNotificationService"/>
 
         <!-- This needs to happen to reset the alarms. When -->
         <!-- the device is turned off all alarms are cleared -->
         <!-- Updated for api 26 -->
         <receiver
-            android:name=".alarms.RCAlarmResetBroadcastReceiver2"
+            android:name=".alarms.RCAlarmResetBroadcastReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-        <service android:name=".alarms.RCAlarmResetService2"/>
+        <service android:name=".alarms.RCAlarmResetService"/>
 
 
     </application>
