--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.pedrojtmartins.racingcalendar"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 10
-        versionName "1.06"
+        versionCode 11
+        versionName "1.07.beta1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -28,6 +28,9 @@ android {
         regular {
             resValue "string", "app_name", "Racing Calendar"
         }
+        beta {
+            resValue "string", "app_name", "Racing Calendar Beta"
+        }
         pro {
             resValue "string", "app_name", "Racing Calendar Pro"
             applicationIdSuffix ".pro"
@@ -40,8 +43,9 @@ android {
 
     variantFilter { variant ->
         def isPro = variant.getFlavors().get(0).name.equals('pro')
+        def isBeta = variant.getFlavors().get(0).name.equals('beta')
         def isDebug = variant.buildType.name.equals('debug')
-        if (isPro && isDebug) {
+        if ((isPro || isBeta) && isDebug) {
             variant.setIgnore(true);
         }
     }
