--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ ext {
     supportVersion = "26.1.0"
     constraintLayoutVersion = "1.0.2"
     firebaseVersion = "11.4.2"
-    gsonVersion = "2.3.0"
+    retrofit2Version = "2.3.0"
 }
 
 task clean(type: Delete) {
