--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.pedrojtmartins.racingcalendar"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 14
-        versionName "1.07"
+        versionCode 17
+        versionName "1.08.b2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
