--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.pedrojtmartins.racingcalendar"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 17
-        versionName "1.08.b2"
+        versionCode 18
+        versionName "1.08"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -31,10 +31,6 @@ android {
         beta {
             resValue "string", "app_name", "Racing Calendar Beta"
         }
-//        pro {
-//            resValue "string", "app_name", "Racing Calendar Pro"
-//            applicationIdSuffix ".pro"
-//        }
     }
 
     dataBinding {
