--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.google.gms:google-services:3.1.1'
         classpath 'com.google.firebase:firebase-plugins:1.1.1'
+
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51'
     }
 }
 allprojects {
@@ -21,6 +23,7 @@ ext {
     constraintLayoutVersion = "1.0.2"
     firebaseVersion = "11.4.2"
     retrofit2Version = "2.3.0"
+    kotlinVersion = "1.1.51"
 }
 
 task clean(type: Delete) {
