--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.google.gms:google-services:3.1.1'
         classpath 'com.google.firebase:firebase-plugins:1.1.1'
 
@@ -14,7 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://maven.google.com" }
+        google()
     }
 }
 
@@ -23,7 +23,7 @@ ext {
     constraintLayoutVersion = "1.0.2"
     firebaseVersion = "11.4.2"
     retrofit2Version = "2.3.0"
-    kotlinVersion = "1.1.51"
+    kotlinVersion = "1.1.50"
 }
 
 task clean(type: Delete) {
