--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        supportVersion = "26.1.0"
+        constraintLayoutVersion = "1.0.2"
+        retrofit2Version = "2.3.0"
+        kotlinVersion = "1.1.51"
+        firebaseVersion = "11.4.2"
+    }
+
     repositories {
         jcenter()
     }
@@ -8,7 +16,7 @@ buildscript {
         classpath 'com.google.gms:google-services:3.1.1'
         classpath 'com.google.firebase:firebase-plugins:1.1.1'
 
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${rootProject.ext.kotlinVersion}"
     }
 }
 allprojects {
@@ -16,14 +24,6 @@ allprojects {
         jcenter()
         google()
     }
-}
-
-ext {
-    supportVersion = "26.1.0"
-    constraintLayoutVersion = "1.0.2"
-    firebaseVersion = "11.4.2"
-    retrofit2Version = "2.3.0"
-    kotlinVersion = "1.1.50"
 }
 
 task clean(type: Delete) {
