--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,15 @@ android {
         }
     }
 
+    flavorDimensions "default"
     productFlavors {
         regular {
             resValue "string", "app_name", "Racing Calendar"
+            dimension "default"
         }
         beta {
             resValue "string", "app_name", "Racing Calendar Beta"
+            dimension "default"
         }
     }
 
@@ -41,7 +44,7 @@ android {
         def isRegular = variant.getFlavors().get(0).name == 'regular'
         def isDebug = variant.buildType.name == 'debug'
         if (!isRegular && isDebug) {
-            variant.setIgnore(true);
+            variant.setIgnore(true)
         }
     }
 }
@@ -70,6 +73,8 @@ dependencies {
     compile "com.google.firebase:firebase-ads:${rootProject.ext.firebaseVersion}"
     compile "com.google.firebase:firebase-messaging:${rootProject.ext.firebaseVersion}"
     compile "com.google.firebase:firebase-config:${rootProject.ext.firebaseVersion}"
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:${rootProject.ext.kotlinVersion}"
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.4.2'
