--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        supportVersion = "26.1.0"
+        constraintLayoutVersion = "1.0.2"
+        retrofit2Version = "2.3.0"
+        kotlinVersion = "1.1.51"
+        firebaseVersion = "11.4.2"
+    }
+
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.google.gms:google-services:3.1.1'
         classpath 'com.google.firebase:firebase-plugins:1.1.1'
+
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${rootProject.ext.kotlinVersion}"
     }
 }
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://maven.google.com" }
+        google()
     }
-}
-
-ext {
-    supportVersion = "26.1.0"
-    constraintLayoutVersion = "1.0.2"
-    firebaseVersion = "11.4.2"
-    retrofit2Version = "2.3.0"
 }
 
 task clean(type: Delete) {
