--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,21 +97,25 @@
             android:name=".alarms.RCAlarmResetService"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
 
+        <!--Weekly notification-->
+        <receiver android:name=".alarms.RCWeeklyAlarmBroadcastReceiver" />
+        <service
+            android:name=".notifications.RCWeeklyNotificationService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <receiver android:name=".widgetProviders.RemainingTimeWidget">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
-            </intent-filter>
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/remaining_time_widget_provider"/>
-        </receiver>
-        <activity android:name=".views.widgetsConfig.RemainingTimeWidgetConfigActivity">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
-            </intent-filter>
-
-        </activity>
+        <!--Widget-->
+        <!--<receiver android:name=".widgetProviders.RemainingTimeWidget">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />-->
+        <!--</intent-filter>-->
+        <!--<meta-data-->
+        <!--android:name="android.appwidget.provider"-->
+        <!--android:resource="@xml/remaining_time_widget_provider" />-->
+        <!--</receiver>-->
+        <!--<activity android:name=".views.widgetsConfig.RemainingTimeWidgetConfigActivity">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
     </application>
-
 </manifest>
